...
        <View
            android:id="@+id/priority"
            android:layout_width="6dp"
            android:layout_height="match_parent" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="4dp" />

        <LinearLayout
...
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingVertical="12dp"
            android:paddingEnd="16dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceTitleMedium" />

            <TextView
                android:id="@+id/notes"
...
